fix: spacing

--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -1,4 +1,4 @@
-.result {
+.form {
   &__container {
     padding: 0 2rem;
   }
@@ -28,5 +28,6 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    margin-bottom: 2rem;
   }
 }
